[gd_scene load_steps=11 format=2]

[ext_resource path="res://sprite/fire_truck.png" type="Texture" id=1]
[ext_resource path="res://scripts/fire_truck.gd" type="Script" id=2]
[ext_resource path="res://sprite/fire_truck_on_fire.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 158.003

[sub_resource type="CircleShape2D" id=2]
radius = 96.0052

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("FireTruck:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "burning"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("FireTruck:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("FireTruck:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 8, 4 )

[node name="fire_truck" type="KinematicBody2D" groups=["fire_trucks"]]
script = ExtResource( 2 )

[node name="FireTruck" type="Sprite" parent="."]
position = Vector2( 0, -4 )
texture = ExtResource( 1 )

[node name="fire_truck" type="Area2D" parent="."]
position = Vector2( 0, -4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="fire_truck"]
shape = SubResource( 6 )

[node name="vision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="vision"]
position = Vector2( -1, -3 )
shape = SubResource( 1 )

[node name="attack" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack"]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/RESET = SubResource( 5 )
anims/burning = SubResource( 3 )
anims/idle = SubResource( 4 )

[node name="fireTruck" type="CollisionShape2D" parent="."]
position = Vector2( 0, -4 )
shape = SubResource( 7 )

[connection signal="area_entered" from="fire_truck" to="." method="_on_fire_truck_entered"]
[connection signal="area_exited" from="fire_truck" to="." method="_on_fire_truck_exited"]
[connection signal="body_entered" from="vision" to="." method="_on_vision_entered"]
[connection signal="body_exited" from="vision" to="." method="_on_vision_exited"]
[connection signal="body_entered" from="attack" to="." method="_on_attack_entered"]
[connection signal="body_exited" from="attack" to="." method="_on_attack_exited"]
